fixing gaps

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
     --brown-800: hsl(14, 45%, 36%);
     --rose-800: hsl(332, 51%, 32%);
     --rose-50: hsl(330, 100%, 98%);
-    --small-space: 10px;
-    --medium-space: 20px;
-    --large-space: 30px;
+    --small-space: 15px;
+    --medium-space: 25px;
+    --large-space: 35px;
     font-size: 16px;
 }
 
@@ -59,7 +59,7 @@ body {
 
 .recipe-card .main-intro h1 {
     font-family: 'Young Serif', serif;
-    font-size: 2.2rem;
+    font-size: 2.7rem;
     font-weight: 400;
 }
 
